[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/1floor/guest_cab.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/1floor/g_cabinet.gd" type="Script" id=3]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=4]
[ext_resource path="res://textures/furniture/cupboard.png" type="Texture" id=5]
[ext_resource path="res://textures/furniture/bookshelf.png" type="Texture" id=6]
[ext_resource path="res://textures/furniture/sofa_green.png" type="Texture" id=7]
[ext_resource path="res://textures/furniture/table_wood.png" type="Texture" id=8]
[ext_resource path="res://textures/furniture/sofa_s_green.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.56164, 1.07366 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.7768, 2 )

[node name="g_cab" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -981.0
margin_top = -552.0
margin_right = 1949.0
margin_bottom = 1243.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/StaticBody2D"]
polygon = PoolVector2Array( -151.039, -50.3698, 70.0433, -50.5711, 69.8085, -58.2754, 87.5501, -58.2848, 87.4831, -50.504, 124.744, -50.7094, 125.046, -1.73973, 150.937, -1.47143, 151.071, 77.3428, -47.8092, 77.5441, -48.0104, 83.648, -77.9263, 83.7822, -78.2617, 77.5441, -151.249, 77.9116, -151.039, -49.9673, -211.118, 96.6619, 174.745, 96.9909, 165.205, -96.763 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="cupboard2" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( -43, -57 )
scale = Vector2( 1, 0.97561 )
texture = ExtResource( 5 )

[node name="bookshelf" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( -10, -57 )
texture = ExtResource( 6 )

[node name="bookshelf2" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( -75, -57 )
texture = ExtResource( 6 )

[node name="cupboard" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( -136, -57 )
scale = Vector2( 1, 0.97561 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -73, -46 )
shape = SubResource( 2 )

[node name="sofa_green" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 143, 28 )
texture = ExtResource( 7 )

[node name="sofa_green2" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( -144, 13 )
texture = ExtResource( 7 )
flip_h = true

[node name="sofa_s_green" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 144, 53 )
texture = ExtResource( 9 )

[node name="table_wood" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( -19, -2 )
texture = ExtResource( 8 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 79.2291, -53.2132 )

[node name="cabinet" type="Area2D" parent="."]
position = Vector2( 78.62, -40.7903 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabinet"]
position = Vector2( 0.145599, -10.6315 )
shape = SubResource( 3 )

[node name="main_hall" type="Area2D" parent="."]
position = Vector2( -63.1592, 71.383 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_hall"]
position = Vector2( 0.159199, 8.61699 )
shape = SubResource( 4 )

[node name="bookshelf" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( -106, -57 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="cabinet" to="." method="_on_cabinet_body_entered"]
[connection signal="body_entered" from="main_hall" to="." method="_on_main_hall_body_entered"]
